--- a/src/main/g8/src/main/resources/web/css/app.css
+++ b/src/main/g8/src/main/resources/web/css/app.css
@@ -17,6 +17,10 @@ ul, li {
 }
 
 li {
+  margin:0 0 .5em 0;
+}
+
+#oauth-endpoints li {
   background:#FFFDD1;
   margin:0 0 .5em 0;
 }
@@ -35,8 +39,62 @@ a:hover {
   color:#EE56A4;
 }
 
+input[type="text"], input[type="password"] {
+  border:1px solid #eee;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding:.25em;
+}
+
 input[type="text"], input[type="submit"],  input[type="password"] {
-  font-size:16px;
+  font-size:18px;
+}
+
+input[type="submit"] {
+  border:1px solid #ccc;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  padding:.25em;
+  color:#fff;
+  text-shadow: #333 0px 0px 2px;
+  background:-webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.34, rgb(201,0,121)),
+    color-stop(0.67, rgb(242,24,111))
+  );
+  background:-moz-linear-gradient(
+    center bottom,
+    rgb(201,0,121) 34%,
+    rgb(242,24,111) 67%
+  );
+}
+
+input[type="submit"]:hover {
+  background:-webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.34, rgb(201,0,121)),
+    color-stop(0.67, rgb(255,0,102))
+  );
+  background:-moz-linear-gradient(
+    center bottom,
+    rgb(201,0,121) 34%,
+    rgb(255,0,102) 67%
+  );
+  cursor:pointer;
+}
+
+#oauth-opts {
+  text-align:center;
+}
+
+input[type="text"],  input[type="password"] {
+  width:200px;
 }
 
 dt {
@@ -46,4 +104,24 @@ dt {
 
 dt, dd {
   margin:0 0 .5em 0;
+}
+
+dd {
+  width:100%;
+}
+
+form {
+  border:4px solid #eee;
+  padding:1em;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+}
+
+.uri {
+  color:#FF589B;
+}
+
+pre {
+  font-family:monaco, monospace;
 }
